--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,27 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.app {
+    padding-top:20px;
+    display : flex;
+    flex-direction: column;
+    align-item: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.title{
+    text-align: center;
+    font-size: 26px;
+}
+
+input{
+    margin: 5px;
+}
+
+.reminder-form{
+    padding: 5px;
+}
+
+.list-item{
+    display: inline-block;
+}
+.delete-button{
+    float: right;
+    padding-left: 5px;
 }
